# multi-model-rag-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  database_design.md  docker-compose.yml  gcp-commands.md  gcp-setup-steps.md  go.mod  iteration_plan.md  project_plan.md  pyproject.toml  python-practice.md  troubleshooting.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: auth_demo.py  db.py  main.py  middleware.py  settings.py
apps/web/: .firebaserc  package-lock.json
cmd/api/: main.go
datasets/: eval_baseline.json  eval_set.jsonl
docs/: RAG-TEST.md  database_design.md  gcp-commands.md  gcp-setup-steps.md  project_plan.md  troubleshooting.md
infra/: deploy_cloud_run.sh
internal/auth/: demo.go
internal/config/: config.go  config_test.go
internal/httpapi/: contracts.go  handlers.go  routes.go  server.go  server_test.go  validation.go  validation_test.go
internal/llm/: router.go  types.go
internal/middleware/: cors.go  observability.go
internal/observability/: logging.go  requestid.go  tracing.go
internal/rag/: chunking.go  citations.go  embeddings.go  (+3 more)
migrations/: 002_rag_schema.sql  003_evals_schema.sql  004_eval_scores.sql
scripts/: eval_gate.py  eval_run.py  llm_smoke.py
tests/: conftest.py  test_chat_endpoint.py  test_db_vector_extension.py  test_demo_unlock.py  test_evals_api.py  test_evals_dataset.py  test_evals_gate.py  test_evals_judge.py  test_health.py  test_ingest_endpoint.py  test_llm_router.py  test_observability.py  test_rag_chunking.py  test_rag_embeddings.py
(+20 files in other folders)
